added usecase nodes and edges to context menu - some nodes throw exceptions when creating through context menu