@@ -36,6 +36,7 @@ public class UmlContextMenuItemProvider implements ContextMenuItemProvider {
       switch (diagramType) {
          case CLASS:
             contextMenu.addAll(classDiagramNodes(position));
+            // only enable the new context menu if user selected two nodes
             if (selectedElementIds.size() == 2) {
                contextMenu.addAll(classDiagramEdges(selectedElementIds.get(0), selectedElementIds.get(1)));
             }
@@ -44,6 +45,10 @@ public class UmlContextMenuItemProvider implements ContextMenuItemProvider {
          case ACTIVITY:
          case OBJECT:
          case USECASE:
+            contextMenu.addAll(useCaseDiagramNodes(position));
+            if (selectedElementIds.size() == 2) {
+               contextMenu.addAll(useCaseDiagramEdges(selectedElementIds.get(0), selectedElementIds.get(1)));
+            }
          case DEPLOYMENT:
          case STATEMACHINE:
             return contextMenu;
@@ -52,13 +57,14 @@ public class UmlContextMenuItemProvider implements ContextMenuItemProvider {
       return contextMenu;
    }
 
+   // CLASS DIAGRAM
    public List<MenuItem> classDiagramNodes(final GPoint position) {
       MenuItem createClass = new MenuItem(Types.CLASS, "Class",
-            Arrays.asList(new CreateNodeOperation(Types.CLASS, position)), true);
+            List.of(new CreateNodeOperation(Types.CLASS, position)), true);
       MenuItem createEnumeration = new MenuItem(Types.ENUMERATION, "Enumeration",
-            Arrays.asList(new CreateNodeOperation(Types.ENUMERATION, position)), true);
+            List.of(new CreateNodeOperation(Types.ENUMERATION, position)), true);
       MenuItem createInterface = new MenuItem(Types.INTERFACE, "Interface",
-            Arrays.asList(new CreateNodeOperation(Types.INTERFACE, position)), true);
+            List.of(new CreateNodeOperation(Types.INTERFACE, position)), true);
 
       MenuItem classDiagramNodes = new MenuItem("classDiagramNodes", "Nodes",
             Arrays.asList(createClass, createEnumeration, createInterface), "classDiagramNodes");
@@ -67,13 +73,46 @@ public class UmlContextMenuItemProvider implements ContextMenuItemProvider {
 
    public List<MenuItem> classDiagramEdges(final String sourceElementId, final String targetElementId) {
       MenuItem createAssociation = new MenuItem(Types.ASSOCIATION, "Association",
-            Arrays.asList(new CreateEdgeOperation(Types.ASSOCIATION, sourceElementId, targetElementId)), true);
+            List.of(new CreateEdgeOperation(Types.ASSOCIATION, sourceElementId, targetElementId)), true);
       MenuItem createGeneralization = new MenuItem(Types.CLASS_GENERALIZATION, "Generalization",
-            Arrays.asList(new CreateEdgeOperation(Types.CLASS_GENERALIZATION, sourceElementId, targetElementId)), true);
+            List.of(new CreateEdgeOperation(Types.CLASS_GENERALIZATION, sourceElementId, targetElementId)), true);
 
       MenuItem classDiagramEdges = new MenuItem("classDiagramEdges", "Edges",
             Arrays.asList(createAssociation, createGeneralization), "classDiagramEdges");
 
       return Lists.newArrayList(classDiagramEdges);
    }
+
+   // USECASE DIAGRAM
+   public List<MenuItem> useCaseDiagramNodes(final GPoint position) {
+      MenuItem createUseCase = new MenuItem(Types.USECASE, "Usecase",
+            List.of(new CreateNodeOperation(Types.USECASE, position)), true);
+      MenuItem createComponent = new MenuItem(Types.COMPONENT, "Component",
+            List.of(new CreateNodeOperation(Types.COMPONENT, position)), true);
+      MenuItem createActor = new MenuItem(Types.ACTOR, "Actor",
+            List.of(new CreateNodeOperation(Types.ACTOR, position)), true);
+      MenuItem createPackage = new MenuItem(Types.PACKAGE, "Package",
+            List.of(new CreateNodeOperation(Types.PACKAGE, position)), true);
+
+      MenuItem useCaseDiagramNodes = new MenuItem("useCaseDiagramNodes", "Nodes",
+            Arrays.asList(createUseCase, createActor, createComponent, createPackage), "useCaseDiagramNodes");
+      return Lists.newArrayList(useCaseDiagramNodes);
+   }
+
+   public List<MenuItem> useCaseDiagramEdges(final String sourceElementId, final String targetElementId) {
+      MenuItem createGeneralization = new MenuItem(Types.GENERALIZATION, "Generalization",
+            List.of(new CreateEdgeOperation(Types.GENERALIZATION, sourceElementId, targetElementId)), true);
+      MenuItem createInclude = new MenuItem(Types.INCLUDE, "Include",
+            List.of(new CreateEdgeOperation(Types.INCLUDE, sourceElementId, targetElementId)), true);
+      MenuItem createExtend = new MenuItem(Types.EXTEND, "Extend",
+            List.of(new CreateEdgeOperation(Types.EXTEND, sourceElementId, targetElementId)), true);
+      MenuItem createAssociation = new MenuItem(Types.USECASE_ASSOCIATION, "Association",
+            List.of(new CreateEdgeOperation(Types.USECASE_ASSOCIATION, sourceElementId, targetElementId)), true);
+
+      MenuItem useCaseDiagramEdges = new MenuItem("useCaseDiagramEdges", "Edges",
+            Arrays.asList(createGeneralization, createAssociation, createExtend, createInclude), "useCaseDiagramEdges");
+      return Lists.newArrayList(useCaseDiagramEdges);
+   }
+
+
 }
